--- a/DeepSpace/src/View/MainView.form
+++ b/DeepSpace/src/View/MainView.form
@@ -46,7 +46,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="pEnemy" max="32767" attributes="0"/>
+                      <Component id="pEnemy" pref="679" max="32767" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="bCombat" min="-2" pref="70" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
