--- a/DeepSpace/src/View/SpaceStationView.form
+++ b/DeepSpace/src/View/SpaceStationView.form
@@ -161,6 +161,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Descartar Hangar Completo"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bDiscardHangarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bMount">
       <Properties>
@@ -258,9 +261,7 @@
     <Container class="javax.swing.JPanel" name="pHangar">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-          <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-            <LineBorder/>
-          </Border>
+          <Border info="null"/>
         </Property>
       </Properties>
 
@@ -286,6 +287,16 @@
       </Properties>
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+      <SubComponents>
+        <Component class="javax.swing.JLabel" name="lNoPDamage">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Ubuntu" size="15" style="1"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="&#xa1;No tienes da&#xf1;o pendiente!"/>
+          </Properties>
+        </Component>
+      </SubComponents>
     </Container>
   </SubComponents>
 </Form>
